--- a/main.tex
+++ b/main.tex
@@ -9,7 +9,7 @@
 \usepackage{fancyhdr}           % Cambiar las cabeceras del documento
 \usepackage{import}
 \usepackage{graphicx}
-\graphicspath{{images/}}
+\graphicspath{{./images/}}
 
 \newcommand{\executeiffilenewer}[3]{%
 \ifnum\pdfstrcmp{\pdffilemoddate{#1}}%
