--- a/main.tex
+++ b/main.tex
@@ -7,22 +7,20 @@
 \bibliographystyle{alpha}       % Estilo de bibliografía
 \usepackage{makeidx}            % Hacer índices
 \usepackage{fancyhdr}           % Cambiar las cabeceras del documento
-\usepackage{import}
-\usepackage{graphicx}
-\graphicspath{{./images/}}
-
-\newcommand{\executeiffilenewer}[3]{%
-\ifnum\pdfstrcmp{\pdffilemoddate{#1}}%
-{\pdffilemoddate{#2}}>0%
-{\immediate\write18{#3}}\fi%
-}
-\newcommand{\includesvg}[1]{%
-\executeiffilenewer{#1.svg}{#1.pdf}%
-{inkscape -z -D --file=#1.svg %
---export-pdf=#1.pdf --export-latex}%
-\input{#1.pdf_tex}%
+\usepackage{graphicx}           % Para insertar imágenes
+\graphicspath{{./images/}}      % La ruta relativa de las imágenes
+\usepackage{hyperref}           % Hacer links guays entre secciones y hacia fuera
+\usepackage[hypcap]{caption}    % Hacer que las referencias se vean, y no se queden por encima (referenciando imagenes, etc.)
+\hypersetup{
+	colorlinks=true,
+	linkcolor=blue,
+	citecolor=red,
 }
 
+% % % % % % % % % % % % % % % % % % % % % % %
+% Sección de comandos personalizados        %
+% % % % % % % % % % % % % % % % % % % % % % %
+\newcommand{\reference}[2]{\hyperref[#1]{\textit{\ref*{#1} #2}}}
 
 \title{Adaptación y extensión de la herramienta de captura y análisis de tráfico KSENSOR}
 \author{Javier Domingo Cansino}
@@ -45,7 +43,6 @@
 \include{cap-referencias}
 
 \pagenumbering{Roman}
-
 
 \bibliography{bibliography}
 
