He acabado al fin de documentar la memoria... ;( a ver si me da tiempo

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -18,3 +18,10 @@
 	year = {2005},
 	journal = {V Jornadas de Ingeniería Telemática, JITEL},
 }
+
+@MastersThesis{DAPR07,
+	author = {Alberto Pineda Rodriguez},
+	title = {Sistema de inyección de tráfico},
+	year = {2007},
+	school = {Escuela Técnica Superior de Ingeniería de Bilbao},
+}
