--- a/cap-objetivos.tex
+++ b/cap-objetivos.tex
@@ -2,6 +2,7 @@
 % !TeX root = main.tex
 
 \chapter{Objetivos}
+\label{cha:objetivos}
 El objetivo principal del proyecto es la \textbf{adaptación del programa Ksensor y modificaciones asociadas en kernel a una versión actual y el desarrollo de herramientas para la validación del prototipo}. El diseño actual es el descrito en el proyecto KSENSOR\cite{KABO05}.
 
 Por lo tanto, los objetivos a conseguir mediante este proyecto son:
