--- a/main.tex
+++ b/main.tex
@@ -16,13 +16,16 @@
 	linkcolor=blue,
 	citecolor=red,
 }
+\usepackage[table]{xcolor}      % Dar colores a las tablas
+\usepackage{eurosym}            % para tener el simbolo del euro
+
 
 % % % % % % % % % % % % % % % % % % % % % % %
 % Sección de comandos personalizados        %
 % % % % % % % % % % % % % % % % % % % % % % %
 \newcommand{\reference}[2]{\hyperref[#1]{\textit{\ref*{#1} #2}}}
 
-\title{Adaptación y extensión de la herramienta de captura y análisis de tráfico KSENSOR}
+\title{Adaptación y extensión de la herramienta de captura y análisis de tráfico Ksensor}
 \author{Javier Domingo Cansino}
 \makeindex
 
@@ -40,7 +43,6 @@
 \include{cap-necesidades}
 \include{cap-gestion}
 \include{cap-riesgos}
-\include{cap-referencias}
 
 \pagenumbering{Roman}
 
