--- a/cap-necesidades.tex
+++ b/cap-necesidades.tex
@@ -1,4 +1,158 @@
 % !TeX spellcheck = es_ES
 % !TeX root = main.tex
 
-\chapter{Necesidades}
+\chapter{Necesidades del sistema}
+La complejidad del sistema que se quiere implementar exige que se elabore con detalle un conjunto de especificaciones de las necesidades del mismo, estando éstas reguladas por los objetivos que se plantearon en el capítulo \reference{cha:objetivos}{Objetivos}. Estas especificaciones servirán de gran utilidad y ayuda como guía para el posterior diseño del sistema, y asimismo, se utilizarán para marcar cuáles son los límites del desarrollo del prototipo.
+
+En este capítulo se desarrollarán las especificaciones bajo dos puntos de vista. Por una parte, atendiendo a las necesidades de los posibles entornos de aplicación de los resultados del proyecto, y por el otro, a las especificaciones funcionales de los elementos de la arquitectura. Primeramente, se describirá el sistema de forma general para que las especificaciones resulten más fáciles de entender.
+
+\section{Visión general del sistema}
+Este proyecto tiene como principal objetivo el rediseño y reimplementación de una sonda a nivel de kernel que permita capturar y analizar todos los paquetes que circulan por una red de alta velocidad. La captura de los paquetes ha de ser eficiente, y el análisis se ha de realizar de forma concurrente, si se dispone de una plataforma multiprocesador (SMP).
+
+Por lo tanto, las especificaciones iniciales que se fijen tienen considerable importancia, ya que de su precisión y exigencia dependerá en gran medida el éxito o fracaso del proyecto.
+
+A partir del diseño realizado se va a desarrollar un prototipo del sensor, el cual debe satisfacer las especificaciones funcionales que se indican en este capítulo. Mediante el prototipo se desea comprobar la funcionalidad del sistema y realizar una serie de pruebas orientadas a validar la hipótesis de partida del proyecto, esto es, la mejora de prestaciones con respecto a Ksensor, a través de la migración de la sonda a una nueva versión de kernel y la aplicación de correcciones para eliminar algunos defectos observados.
+
+En el documento Pliego de Condiciones se establecerán en detalle cuáles son las pruebas de validación que el prototipo a desarrollar debe cumplir. El plan de pruebas se definirá antes de la implementación y se empleará para demostrar que el prototipo cumple el conjunto de especificaciones funcionales indicadas, que, lógicamente, no tienen por qué ser todas las que se imponen para el diseño global del proyecto.
+
+Por otro lado, una vez validado el prototipo, se procederá a realizar una serie de pruebas de rendimiento en el sensor, con el objeto de poder evaluar la mejora de prestaciones que se obtiene en Ksensor gracias a la actualización. El plan de pruebas a seguir se definirá en el documento Estudio Comparativo de Rendimientos, en el cual se realizará también un estudio comparativo a partir de los resultados obtenidos.
+
+\section{Especificaciones de los entornos de aplicación}
+Los resultados de este proyecto deben estar enfocados para dar solución a las necesidades que se plantean en el ámbito de la investigación sobre la mejora de rendimientos en el análisis de tráfico eficiente en redes de datos. En este sentido, los entornos de aplicación que se plantean son los siguientes:
+
+\begin{enumerate}
+\item Entorno de desarrollo.
+\item Entorno de pruebas.
+\item Entorno de análisis comparativo.
+\end{enumerate}
+
+A continuación se desarrollarán las especificaciones particulares para cada uno de
+estos entornos.
+
+\subsection{Entorno de desarrollo}
+El prototipo de Ksensor que se va a desarrollar en este proyecto se ejecutará también en el nivel de kernel, con lo cual se deben considerar las particularidades, restricciones y complejidades que conlleva una implementación de este tipo. En el kernel difícilmente pueden utilizarse herramientas de depuración tipo gdb, y además, un simple error o bug puede llegar a provocar el colapso total del sistema.
+
+En consecuencia, será necesario reiniciar la máquina, pero lo que es aún peor, se destruirán la mayor parte de los indicios o evidencias que podían apuntar el origen de dicho fallo. Es por ello que, en el desarrollo de Ksensor, se deben habilitar mecanismos de depuración que permitan comprobar el funcionamiento de los módulos, además de las facilidades de depuración ya implementadas en el kernel, o bien en base a éstas.
+
+A continuación se describe el escenario en el que se desarrollará el Ksensor. Se utilizarán tres ordenadores, conectados entre sí a través de una red independiente:
+\begin{description}
+\item[Gestor] Esta máquina se utilizará como estación de trabajo, desde la cual se accederá al resto de máquinas de forma remota (vía ssh).
+\item[Sonda] Esta máquina se utilizará para la programación, integración y ejecución de Ksensor. El sistema operativo será Debian GNU/Linux, en la versión del kernel 3.6.
+\item[Inyector] Esta máquina se utilizará como inyector de tráfico en las pruebas de validación del prototipo, así como en las pruebas de rendimiento.
+\end{description}
+
+La sonda y el inyector estarán conectados entre sí a través de un switch, en el que sólo estarán conectadas estas dos máquinas, para poder controlar el tráfico que se introduce en la red de captura. Ambas máquinas se gestionarán desde el gestor, utilizando una interfaz de red distinta. Se utilizará esta configuración para llevar a cabo el plan de pruebas de validación definido en el Pliego de Condiciones.
+
+La sonda se configurará de tal manera que, cuando se produzca un error, se saque en los ficheros de registros \textit{logs} el mensaje correspondiente a través del kernel. Por defecto, el mensaje se imprime en la pantalla y se vuelca a un fichero de \textit{logs}, gracias a la aplicación syslogd.
+
+No obstante, si el error es grave y el sistema colapsa (la máquina deja de responder) los mensajes no se almacenarán, con lo cual se pierde el motivo por el que se produjo el error. Para evitar esto, se podría utilizar el mecanismo netconsole implementado en Linux, mediante el cual se envían los mensajes por medio de paquetes UDP, antes de que el sistema se cuelgue. La estación de trabajo (gestor) sería el receptor o servidor de dichos mensajes, mientras que la sonda sería el cliente.
+
+Otro de los mecanismos que puede ser implementado, aunque con algo más de tiempo dedicado, sería la posibilidad ejecutar un kernel de soporte para que en caso de fallo, tomara el control de la memoria, y guardara el estado completo de la memoria, para posteriormente ser enviado al desarrollador.
+
+Así pues, las especificaciones a tener en cuenta en el desarrollo de la sonda son las siguientes:
+\begin{itemize}
+\item El kernel (Linux 3.6) se debe configurar con soporte para depuración.
+\item El prototipo de la sonda debe disponer de los mecanismos de depuración necesarios para poder evaluar el funcionamiento del sistema con distinto nivel de detalle. En este sentido, se debe poder comprobar el funcionamiento global de la sonda, el de un módulo en concreto o el de una única función.
+\item El sistema debe ser capaz de enviar los mensajes de error que se produzcan aún en el caso de que la máquina se vaya a quedar bloqueada hasta que se ejecute un reinicio manual.
+\item Se deben implementar funciones que permitan realizar pruebas unitarias sobre los módulos de la sonda, como por ejemplo, comprobar que se lee la lógica de decisión de forma adecuada, que se desensamblan los paquetes correctamente, etc.
+\item La sonda debe exportar diversas estadísticas mientras se ejecuta, de modo que se pueda evaluar su comportamiento en determinadas circunstancias, por ejemplo, la forma en que se activa y desactiva el control de congestión.
+\end{itemize}
+
+\subsection{Entorno de pruebas}
+El entorno de pruebas se refiere a las pruebas de rendimiento que se van a realizar en el laboratorio, con el objeto de valorar de forma cuantitativa la mejora de prestaciones que se obtiene con Ksensor en comparación con la anterior implementación del mismo. Para ello, se utilizará la arquitectura para la automatización de pruebas diseñada en \cite{AABS05}, adecuándola a las exigencias y características de nuestro sistema de captura y análisis de tráfico de red.
+
+El escenario en el que se realizarán las pruebas será similar al descrito en la sección anterior. La sonda (Ksensor) y el inyector se conectarán por medio de un switch, de tal forma que todo el tráfico introducido en la red por el inyector irá a parar a la sonda, el cual aplicará la carga de análisis oportuna sobre los paquetes que captura.
+
+Puesto que la finalidad principal de estas pruebas es obtener las características de rendimiento de las sondas, lo más interesante es comprobar el throughput de los mismos cuando se satura el enlace. Antes, se utilizaban varias máquinas para saturar el enlace, ya que es muy difícil que un sistema operativo convencional pueda generar tal volumen de tráfico.
+
+Ahora, se dispone de inyectores hardware \cite{DAPR07} que tienen la capacidad de saturar un enlace a 1Gbps. Este tipo de inyectores no requieren otros equipos, por lo que se podría utilizar un enlace directo. En la arquitectura anterior se utilizaba un switch como forma de agregar tráfico ethernet, pero se ha decidido no suprimir el switch para poder seguir disponiendo de unas estadísticas externas.
+
+Así pues, en esta configuración se conectarán dos máquinas al switch: una para el sensor y una inyectora. En cierto modo, el inyector es el propio switch, por lo que en las pruebas de rendimiento será necesario obtener también las estadísticas relativas a éste, por llevar una contabilidad exacta por un medio externo.
+
+Una vez planteado el escenario en el que se realizarán las pruebas de rendimiento, se pueden definir ya las especificaciones que se deben tener en consideración:
+\begin{itemize}
+\item La arquitectura de pruebas del sensor se basará en la plataforma genérica
+para la automatización de pruebas diseñada en [BEAU05].
+\item El sistema ha de ser capaz de lanzar baterías de pruebas, configurando de
+forma automatizada todos los agentes que participan en la prueba.
+\item Se desarrollará un agente para facilitar el encendido y apagado de ksensor
+de forma automatizada.
+\item Se proveerán las utilidades necesarias para configurar los parámetros del
+sensor y del inyector, así como para obtener la información relativa a todos
+los agentes que participan en la comunicación.
+\begin{itemize}
+\item Parámetros de funcionamiento del sensor.
+\begin{itemize}
+\item Modos de captura.
+\item Parámetros de la cola de paquetes.
+\end{itemize}
+\item Parámetros de funcionamiento del inyector
+\begin{itemize}
+\item Tasa de inyección.
+\end{itemize}
+\item Estadísticas de las interfaces de red.
+\item Estadísticas del switch.
+\end{itemize}
+\item Se deben diseñar plantillas de pruebas para facilitar la realización de prue-
+bas de rendimiento en laboratorio. Mediante estas plantillas se indicarán los
+parámetros con los que se van a ejecutar los agentes.
+\end{itemize}
+
+\subsection{Entorno de análisis comparativo}
+A partir de los resultados obtenidos en las pruebas de rendimiento se puede realizar un estudio comparativo, con el fin de evaluar la mejora de prestaciones de ksensor. Para ello, se hace necesario definir primeramente un plan de las pruebas que se deben realizar, ya que de su precisión y exigencia dependerá en gran medida el rigor de las conclusiones que se vayan a obtener. El plan de pruebas se detalla en la sección Plan de Pruebas en el documento Estudio Comparativo de Rendimientos, pero en este apartado se aportarán una serie de especificaciones iniciales de las mismas.
+
+Las pruebas de rendimiento que se realicen deben permitir cuantificar el throughput (tasa de paquetes procesados) al ser sometidos a diferentes tasas de inyección, especialmente para cargas de tráfico elevadas, con el objeto de poder conocer su comportamiento en redes de alta velocidad. Las pruebas deben facilitar, asimismo, conocer los parámetros de configuración óptimos en las diferentes versiones de ksensor. A partir de los resultados que se obtengan, se podrán realizar gráficas comparativas, utilizando las herramientas necesarias para dicha tarea.
+
+Por tanto, las especificaciones que se han de tener en cuenta al realizar el análisis comparativo entre las diferentes versiones son:
+\begin{itemize}
+\item Se deben identificar los parámetros susceptibles de estudio.
+\item Se deben definir los prototipos de ensayo, a fin de realizar:
+\begin{itemize}
+\item Comparativa de las diferentes versiones de ksensor.
+\item Comparativa de las diferencias entre los controles de congestión.
+\item Comparativa de rendimiento para diferente número de procesadores.
+\end{itemize}
+\item Juegos de ensayo: Para poder realizar un análisis comparativo de los diferentes prototipos y de las diferentes configuraciones, es necesario definir, en cada caso, la colección de pruebas a realizar en el laboratorio.
+\item Se deben proveer las utilidades necesarias para poder dibujar gráficas comparativas a partir de los resultados obtenidos en laboratorio.
+\end{itemize}
+
+\subsection{Especificaciones funcionales del sistema}
+En esta sección se pretende ofrecer una descripción de las especificaciones o requerimientos que deben fijarse para el diseño del sistema, de modo que el cumplimiento de éstas conduzca a la consecución de los objetivos planteados al comienzo del presente documento.
+
+Los módulos que se relatan tienen valía por si mismos, ya que no son de uso exclusivo junto con Ksensor, y por lo tanto, los requerimientos irán orientados hacia un uso más general que Ksensor. A continuación, se desglosarán las características más importantes de todos los módulos nuevos y se mencionarán las especificaciones de cada uno de ellos:
+\begin{itemize}
+\item Módulo estadísticas.
+\item Módulo traceo.
+\end{itemize}
+
+\subsection{Módulo de estadísticas}
+El módulo de estadísticas de que se va a implementar debe hacer mediciones sobre los parámetros que se considerarán a continuación. También deberá proveer una interfaz sencilla de acceso a los mísmos, permitiendo la recogida de datos después de cada prueba.
+
+Los datos relevantes a ser estudiados deberían ser:
+\begin{itemize}
+\item Los tiempos totales empleados en:
+\begin{itemize}
+\item Rutinas de servicio a la interrupción de captura de red.
+\item Captura de paquetes por interfaz.
+\item Capturar cada paquete.
+\end{itemize}
+\item Números absolutos de:
+\begin{itemize}
+\item Rutinas de servicio a la interrupción de captura de red.
+\item Capturas de paquetes por cada interfaz.
+\item Paquetes procesados para su captura.
+\end{itemize}
+\end{itemize}
+
+
+\subsection{Módulo de traceo}
+La finalidad del módulo de traceo es, como su propio nombre indica, llevar a cabo trazas. Debe ser hecho de una manera simple, extensible y modular. La idea detrás de este módulo es que se pueda ampliar para posibles necesidades de trazas que puedan surgir. Incluso, si en algún momento fuera necesario, añadir varias trazas diferentes utilizando el mismo sistema.
+
+La existencia de este módulo se propone como manera de comprobar modelos teóricos de como los paquetes son recibidos en el sistema, pero pueden ser utilizados con muchos otros fines.
+
+Este módulo deberá cumplir las siguientes premisas:
+\begin{itemize}
+\item Deberá ser lo más simple posible.
+\item Tiene que ser rápido y eficiente, sin gastar mucho tiempo, ya que en rutinas prioritarias podría tener un impacto grave.
+\item Tener una interfaz fácil de acceder sin necesidad de crear un mapa de memoria personalizado.
+\end{itemize}
