He seguido avanzando, y creo que he acabado con la memoria, voy a empezar con el documento de diseño

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -3,6 +3,7 @@
 	title = {Diseño e implementación de un sensor a nivel de kernel para el análisis de tráfico en redes de alta velocidad},
 	school = {Escuela Técnica Superior de Ingeniería de Bilbao},
 	year = {2005},
+	type = {Proyecto de fín de carrera},
 }
 
 @MastersThesis{AIDG03,
@@ -10,6 +11,7 @@
 	title = {Diseño de un sistema de gestión para dispositivos dedicados al análisis de tráfico de red},
 	school = {Escuela Técnica Superior de Ingeniería de Bilbao},
 	year = {2003},
+	type = {Proyecto de fín de carrera},
 }
 
 @article{AABS05,
@@ -19,9 +21,10 @@
 	journal = {V Jornadas de Ingeniería Telemática, JITEL},
 }
 
-@MastersThesis{DAPR07,
+@MastersThesis{DAPR10,
 	author = {Alberto Pineda Rodriguez},
 	title = {Sistema de inyección de tráfico},
 	year = {2007},
 	school = {Escuela Técnica Superior de Ingeniería de Bilbao},
+	type = {Proyecto de fín de carrera},
 }
