--- a/cap-riesgos.tex
+++ b/cap-riesgos.tex
@@ -2,3 +2,11 @@
 % !TeX root = main.tex
 
 \chapter{Riesgos}
+
+El kernel de Linux está pensado para ser de propósito general, y como tal, las rutinas de servicio a la interrupción están preparadas para unos volúmenes de tráfico inferiores al ámbito de aplicación de este proyecto.
+
+Por ello, es importante considerar que aunque el desarrollo de kernel haya avanzado tanto en estos últimos años, es posible que los avances puedan suponer algún tipo de impedimento respecto al anterior kernel, aún cuando se hayan observado mejoras generales en el funcionamiento de la nueva versión.
+
+Debe tenerse en cuenta, que tanto como la estructura del kernel se ha vuelto más compleja, también puede estar convergiendo hacia una mejor respuesta hacia el usuario. De todos modos, este tipo de cambios aunque no son frecuentes, es un potencial riesgo del proyecto.
+
+Otro de los riesgos de este proyecto es la posibilidad de que el servidor se sature y evite que el administrador se pueda poner en contacto con él. Por lo tanto, aunque no se puede evitar que haya momentos en los que el equipo no responda, sí que se evitara en la medida de lo posible.
