--- a/main.tex
+++ b/main.tex
@@ -18,6 +18,7 @@
 }
 \usepackage[table]{xcolor}      % Dar colores a las tablas
 \usepackage{eurosym}            % para tener el simbolo del euro
+\usepackage[Bjornstrup]{fncychap}    % cambiar el estilo soso de los capítulos
 
 
 % % % % % % % % % % % % % % % % % % % % % % %
