He maquetado bastante el documento de la memoria, lo he cambiado de lugar, etc. Ahora empezaré con el de diseño

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -28,3 +28,12 @@
 	school = {Escuela Técnica Superior de Ingeniería de Bilbao},
 	type = {Proyecto de fín de carrera},
 }
+
+@inproceeedings{JMKR96,
+	author = {"J. Mogul", "K. K. Ramakrishnan"},
+	title = {"Eliminating receive livelock in an interrupt-driven kernel"},
+	journal = {Proceedings of 1996 Usenix Technical Conference, San Diego (California)},
+	year = {1996},
+}
+
+
