--- a/memoria/cap-alternativas.tex
+++ b/memoria/cap-alternativas.tex
@@ -21,7 +21,7 @@ En la siguiente figura, se puede ver la arquitectura actual del sistema implemen
 
 \begin{figure}[h]
 \centering
-\includegraphics[width=\textwidth]{images/arquitectura-previa}
+\includegraphics[width=\textwidth]{arquitectura-previa}
 \caption{Esquema de la arquitectura previa de ksensor}
 \label{fig:arquitectura-previa}
 \end{figure}
