He avanzado mucho, de hecho, mucho más que esto pero se me han perdido avances por olvidárseme guardarlos :S voy muy retrasado por ese super fail

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -37,3 +37,12 @@
 }
 
 
+
+@Misc{DAVE10,
+	author = {David Miller},
+	title = {How GRO works},
+	howpublished = {Web article},
+	month = {08},
+	year = {2010},
+	note = {http://vger.kernel.org/~davem/cgi-bin/blog.cgi/2010/08/30},
+}
